html adjusted for js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <head>
     <title>Joseph Pacia</title>
     <link rel="stylesheet" href="firstwebpage.css">
-    <script src="firstwebpage.js"></script>
 </head>
 
 <body>
@@ -17,7 +16,7 @@
             <p>Welcome to my website lol</p>
             <p><a href="#about">About Me</a>
             <a href="#accomplishments">My Accomplishments</a></p>     
-            <img class="pic" src="C:\Users\pacia\Documents\firstwebpage\FB.jpg" height="100" width="100" alt="Joseph Pacia">
+            <img class="pic" src="FB.jpg" height="100" width="100" alt="Joseph Pacia">
         <a name="about"></a>    
         <h2>About</h2>
             <p>I am Joseph Tristan Manlutac Pacia and I was born under in San Diego, CA on June 22, 1995 and spent most of my life growing up as a white-washed Filipino in Murrieta, CA.</p>
@@ -39,6 +38,8 @@
             </ul>
             <p><a href="#home">Back to home</a></p>
     </div>
+    <button>Change name</button>
+    <script src="firstwebpage.js"></script>
 </body>
 
 </html>
