fixed name of js file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p><a href="#home">Back to home</a></p>
     </div>
     <button>Change name</button>
-    <script src="firstwebpage.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
