added cs 120b project video link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img class="pic" src="FB.jpg" height="100" width="100" alt="Joseph Pacia">
         <a name="about"></a>    
         <h2>About</h2>
-            <p>I am Joseph Tristan Manlutac Pacia and I was born under in San Diego, CA on June 22, 1995 and spent most of my life growing up as a white-washed Filipino in Murrieta, CA.</p>
+            <p>I am Joseph Tristan Manlutac Pacia and I was born in San Diego, CA on June 22, 1995 and spent most of my life growing up as a white-washed Filipino in Murrieta, CA.</p>
             <h3>Early Childhood</h3>
             <p>Being raised in a Navy family, most of my early childhood is composed of constantly moving to different places including Alameda, CA, Yokosuka, Kanagawa, San Diego, CA, Hemet, CA, and Murrieta, CA. </p>
             <h3>High School</h3>
@@ -34,6 +34,7 @@
                 <li>2003: Started playing piano.</li>
                 <li>2010-2013: Chaparral NJROTC</li>
                 <li>2015: Started learning C++.</li>
+                <li><a href = https://www.youtube.com/watch?v=_XJC6d1o-KE>2017: Hide-and-Seek Robocar</a></li>
                 <li>2017-present: Gamespawn at UCR "Webmaster" lol</li>
             </ul>
             <p><a href="#home">Back to home</a></p>
