--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Joseph Pacia</title>
+    <title>Joseph Paci</title>
     <link rel="stylesheet" href="firstwebpage.css">
 </head>
 
