--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html>
 
 <head>
-    <title>Joseph Paci</title>
+    <title>Joseph Pacia</title>
     <link rel="stylesheet" href="firstwebpage.css">
 </head>
 
 <body>
     <div>
         <a name="home"></a>
-        <h1>Joseph Pacia's Website</h1>
+        <h1>Joseph Pacia's Websit</h1>
 
         <h2>Home</h2>
             <p>Welcome to my website lol</p>
