--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div>
         <a name="home"></a>
-        <h1>Joseph Pacia's Websit</h1>
+        <h1>Joseph Pacia's Website</h1>
 
         <h2>Home</h2>
-            <p>Welcome to my website lol</p>
+            <p>Welcome to my website</p>
             <p><a href="#about">About Me</a>
             <a href="#accomplishments">My Accomplishments</a></p>     
             <img class="pic" src="FB.jpg" height="100" width="100" alt="Joseph Pacia">
