--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     </div>
     <button>Change name</button>
     <script src="main.js"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="joseph-pacia-13050311b"><a class="LI-simple-link" href='https://www.linkedin.com/in/joseph-pacia-13050311b?trk=profile-badge'>Joseph Pacia</a></div>
 </body>
 
 </html>
